# iiswebsocketserver

./: CMakeLists.txt  README.md  iiswebsocket.cpp  iiswebsocket.h  main.cpp  main.def
docs/: PrintLastError.md
docs/WebSocketServer/: ErrorBufferLength.md  ErrorCode.md  ErrorDescription.md  Free.md  Initialize.md  IsConnected.md  MaxPayloadLength.md  PerformHandshake.md  Receive.md  Send.md  Stream.md  WebSocketFrame.md
